using System.Collections;
using System.Collections.Generic;
using UnityEngine;
using UnityEngine.UI;

public class MonsterController2 : MonoBehaviour
{
    public MonsterData monsterData;
    // MonsterMananger ????????
    // for using manager's func
    public MonsterManager manager;
    //???? ????????
    public Rigidbody rig;
    // ?????? ??????????
    // Monster Animator
    public Animator anim;

    public GameObject hpBarPrefab;
    public GameObject hpBar;




    //???????? ????
    //moving direction //Move(), Chase()
    private Vector3 direction;
    // ???????? ????????
    // Script which the player has
    private PlayerController player;
    // ?? ?????? hpBar
    private Vector3 hpBarOffset = new Vector3(0, 2.2f, 0);
    private Canvas uiCanvas;
    private Image hpBarImage;

    virtual public void Start()
    {
        monsterData = DataManager.instance.LoadJsonFile
                      <Dictionary<string, MonsterData>>
                      (Application.dataPath + "/MAIN/Data", "goblin")
                      ["001_goblin"];
        // setting default state
        monsterData.state = MonsterData.States.Idle;
        // setting default seeking state
        monsterData.isFound = false;
        // setting default destination
        monsterData.destPosition = null;
        {/*
            // ?????? ?????? ?????? ???? ????????
            // setting default values of Ghost
            monsterData = new MonsterData();
            // setting default state
            monsterData.state = MonsterData.States.Idle;
            // setting name
            monsterData.name = "Goblin";
            // setting default hp
            monsterData.maxHp = 90f;
            monsterData.curHp = 90f;
            // setting default speed
            monsterData.moveSpeed = 70f;
            monsterData.turnSpeed = 0.1f;
            // setting default power
            monsterData.attackForce = 8f;
            // setting default seeking state
            monsterData.isFound = false;
            // setting default destination
            monsterData.destPosition = null;
            // attack available distance
            monsterData.distance = 2f;
            */
        }


        SetHpBar();
        hpBar.SetActive(false);

        // ?????? ??????????
        // Monster Animator
        anim = GetComponent<Animator>();
        // ?????? ????????
        // Monster Rigidbody
        rig = GetComponent<Rigidbody>();
        // ?????? ?????? ???????? ????
        // get MonsterManager script from GamaManager
        manager = GameObject.Find("MonsterManager").GetComponent<MonsterManager>();


        UpdateHpBar(monsterData.curHp);

        // start with default state
        StartCoroutine(Idle());
    }

    private void DeleteHpBar()
    {
        Destroy(hpBar);
    }



    // ???? ?????????? ????
    // Attack aniamating
    private void Animating()
    {
        //???? ??????????
        anim.SetBool("Walk", false);
        //anim.SetBool("isIdle", false);
        anim.SetTrigger("Attack");
    }

    // ???????? ????
    // damaging player
    private void damaging()
    {

        player.Damaged(monsterData.attackForce);

    }


    // ???????? ???? ???? ???????? ????
    private void OnCollisionEnter(Collision collision)
    {
        if (collision.gameObject.tag == "Bullet")
        {
            UpdateHpBar(monsterData.curHp);
        }
    }

    // ?????????? ???????? ???? ???????? ????
    // player is in range of Monster's Sight
    private void OnTriggerEnter(Collider other)
    {
        // ?????????? ???????? ???? ???????? ????
        // player is in range of Monster's Sight
        if (other.tag == "Player")
        {

            // ?????? ???? ?? ??????
            hpBar.SetActive(true);

            // ???????? ????
            // Monster found some player
            monsterData.isFound = true;

            // ?????? ???????? ?????? ????
            // save destination as player's location
            monsterData.destPosition = other.transform;

            // ???? ?? ???????? ????
            // save the player
            player = other.GetComponent<PlayerController>();
        }
    }


    // ?????????? ???????? ?????? ???????? ????
    // player is out of range of Monster's Sight
    private void OnTriggerExit(Collider other)
    {
        // ?????????? ???????? ?????? ???????? ????
        // player is out of range of Monster's Sight
        if (other.tag == "Player")
        {

            // ?????? ???? ?? ??????
            hpBar.SetActive(false);

            // ?????????? ????
            // player is leaving the range
            monsterData.isFound = false;

            // ?????? ?????????? ????
            // save destination as default
            monsterData.destPosition = null;

            // ???????? ??????
            // remove the player
            //player = null;
        }
    }

    /*---------------------------------------------
     *              DIE
     * -------------------------------------------*/

    public void Die()
    {
        Transform itemLocation;
        // ???? ????+1?? ?????? ??????
        itemLocation = transform;
        itemLocation.position += new Vector3(0, 1, 0);
        // ?????? ??????????
        //manager.DropItem(itemLocation);
        // ?????? ????
        manager.DeleteMonster(gameObject);
    }

    /*---------------------------------------------
     *              ATTACK
     * -------------------------------------------*/

    public IEnumerator Attack()
    {
        //???? ???? ????
        float attackTime = 0f;

        //???? ???? ???? ???? ????
        while (monsterData.state == MonsterData.States.Attack)
        {
            //Timer start
            attackTime += Time.deltaTime;

            //?????????? ????????, ???????? ???? ???? ???? ?????? ????
            if (!monsterData.isFound || Vector3.Distance(transform.position, monsterData.destPosition.position) > monsterData.distance)
            {
                //?????????? ??????????, ???? ???? ???? ???? ??
                //???? ????
                //?????? ?????? Attack ?????? ????
                monsterData.state = MonsterData.States.Chase;
                StartCoroutine(Chase());
                yield break;
            }

            //???? ???? 2.5?? ???????? ????
            if (attackTime >= 2.5f)
            {
                //timer reset
                attackTime = 0f;

                //Start Attack
                //???? ?????????? ???? ?? (chase ?? || ???? collider ?????? ???? ??)
                if (monsterData.destPosition != null)
                {
                    // ???????? HP ????
                    // damaging player
                    Invoke("damaging", 0.83f);

                    Animating();
                }
            }
            else anim.SetBool("isIdle", true);
            //Wait until next frame
            yield return null;
        }

        // ???? ?????????? ????????.
        yield return null;
    }

    /*---------------------------------------------
     *              DAMAGE
     * -------------------------------------------*/


    // player?? monster ???? ???? ?? ????
    // If player damages monster this will be called
    public void Damaged(float scale)
    {
        // ??????????
        anim.SetTrigger("Damaged");

        // ???? ?????? ???? ???? ??
        if (monsterData.curHp > 0)
        {
            //scale(-)???? ?????? ?????? ????????.
            monsterData.curHp -= scale;
            print(gameObject.name + " Damaged");
            UpdateHpBar(monsterData.curHp);
        }
        // ???? ?????? ???? ??
        else
        {
            // ???? ??????????
            anim.SetBool("Dead", true);
            // ?????? ?????? ????
            DeleteHpBar();
            Invoke("Die", 1f);
        }

        print(gameObject.name + "'s cur hp: " + monsterData.curHp);
    }

    /*---------------------------------------------
     *              MOVE
     * -------------------------------------------*/

    public void Move()
    {
        //?????? ???? ????
        rig.AddForce(direction * Time.deltaTime * monsterData.moveSpeed, ForceMode.VelocityChange);

        // ???? ???????? ??????
        transform.LookAt(Vector3.Lerp(transform.position, monsterData.destPosition.position, monsterData.turnSpeed * Time.deltaTime));
    }

    /*---------------------------------------------
     *              CHASE
     * -------------------------------------------*/

    public IEnumerator Chase()
    {
        //?????????? ?? ???? ??
        if (anim.GetBool("isWalk") == false)
        {
            //???? ??????????
            anim.SetBool("isWalk", true);
            anim.SetBool("isIdle", false);
        }

        //???? ????
        while (monsterData.state == MonsterData.States.Chase)
        {
            // ?????? ?? ?? ???? ??
            if (monsterData.isFound)
            {

                // ???????? ???????? ?????? ????
                monsterData.destPosition = player.GetComponent<Transform>();


                // ?????????? ???????????? ????
                Vector3 direction = (monsterData.destPosition.position - transform.position);

                //?????? ???? ????
                Move();

                //???????? ???? ???? ????(2f)?? ?????????? ????
                if (Vector3.Distance(transform.position, monsterData.destPosition.position) <= monsterData.distance)
                {
                    //?????? ?????? Attack ?????? ????
                    monsterData.state = MonsterData.States.Attack;

                    //???? ???? ????
                    StartCoroutine(Attack());
                    yield break;
                }

                //1?? ?? ???? ??????
                yield return new WaitForSeconds(1.0f);
            }

            //?????? ?? ?? ???? ??
            else if (!monsterData.isFound)
            {
                //?????? ?????? Idle ?????? ????
                monsterData.state = MonsterData.States.Idle;

                //Idle ???? ????
                StartCoroutine(Idle());
                yield break;
            }
        }



        //???? ?????????? ????????.
        yield return null;
    }

    /*---------------------------------------------
     *              Idle
     * -------------------------------------------*/

    public IEnumerator Idle()
    {
        //Idle ?????? ?? ???? ????
        while (monsterData.state == MonsterData.States.Idle)
        {
            /*
            // Idle 파라미터 따로 있을 때
            if (anim.GetBool("isIdle") == false)
            {
                //?????? ?????????? ????
                anim.SetBool("isIdle", true);
                anim.SetBool("isWalk", false);
            }
            */

            // Idle 파라미터 따로 없을 때
            anim.SetBool("Walk", false);

            //?????????? ?????? ??
            if (monsterData.isFound)
            {
                //?????? ?????? ???? ?????? ????
                monsterData.state = MonsterData.States.Chase;

                //?????????? ?? ?? ??????, ????????.
                StartCoroutine(Chase());
                yield break;
            }

            //Patrol ???????

            yield return new WaitForSeconds(1.0f);
        }
        // ???? ?????????? ????????.
        yield return null;
    }

    /*---------------------------------------------
     *              SETHPBAR
     * -------------------------------------------*/

    public void SetHpBar()
    {
        uiCanvas = GameObject.Find("UI Canvas").GetComponent<Canvas>();
        hpBar = Instantiate<GameObject>(hpBarPrefab, transform.position, Quaternion.identity, uiCanvas.transform);
        //hpBar = Instantiate<GameObject>(hpBarPrefab, transform.position, Quaternion.identity, uiCanvas.transform);
        hpBarImage = hpBar.GetComponentsInChildren<Image>()[1];

        var _hpbar = hpBar.GetComponent<EnemyHpBar>();
        _hpbar.targetTr = transform;
        _hpbar.offset = hpBarOffset;
    }

    /*---------------------------------------------
     *              UPDATEHPBAR
     * -------------------------------------------*/

    public void UpdateHpBar(float hp)
    {
        hpBarImage.fillAmount = hp / monsterData.maxHp;
        if (hp <= 0f)
        {
            hpBarImage.GetComponentsInParent<Image>()[1].color = Color.clear;
        }
    }

}
